updating+reordering About, adding new avi

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Jared Butler</span>
                 <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/newprofile.jpg" alt="">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/F21_profile.jpg" alt="">
                 </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,13 +45,13 @@
                         <a class="nav-link js-scroll-trigger" href="#home">Back to Top</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#project">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                     <p class="lead mb-5">Hi there! My name is Jared, and I'm a full stack software engineer, frontend designer, and data visualization enthusiast! 
                         I also have passions in procedural generation, Web3 and the Metaverse, and journalism in digital media, so I made this little website to talk about myself and those passions!<br><br> 
                         <b>I'm currently looking for a full-time position! My skills most closely align with Full Stack Engineer, Frontend Engineer, Web Developer, and Data Visualization Developer positions. 
-                            However, I love to learn and am always trying to add new technologies to my tool belt, so I'm open to any kind of role you might have for me! So if you're interested in hiring me, keep reading to learn a little bit more about my skills and interests!</b></p>
+                            However, I love to learn and am always trying to add new technologies to my tool belt, so I'm open to any kind of role you might have for me! If you're interested in hiring me, keep reading to learn a little bit more about my skills and interests!</b></p>
 
                     <div class="social-icons">
                         <a class="icontrans" href="https://www.linkedin.com/in/jbtlr/">
@@ -86,33 +86,6 @@
                             <i class="fas fa-file-invoice fa-lg"></i>
                         </a>
                     </div>
-                </div>
-            </section>
-
-            <hr class="m-0">
-
-            <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
-                <div class="w-100">
-                    <h2 class="mb-5">A Little More About Me...</h2>
-                    <p>Born and raised in Dallas, TX, I've had a love for coding and digital art since I was very little--I have fond memories of tinkering around with GameMaker in elementary school, showing off my little homemade projects to my teachers.</p>
-                    <figure class="figure">
-                        <div class="imgwrap">
-                            <img class="figure-img img-fluid" src="img/bluewirez.png" alt="Bluewirez">
-                        </div>
-                        <figcaption class="text-center">"Bluewirez", a pseudo-electricity simulator I made in middle school where you can build glitchy circuits using a set of premade components.</figcaption>
-                    </figure>
-                    <p>During my first year of high school, I made a portfolio website for the first time; the term 'website' is perhaps a bit generous, as the frontpage consisted of little more than some turqoise text laid against a blue background. 
-                        Nonetheless, even by then I'd developed a fascination for procedural algorithms--I spent my spare time making tiny experimental web projects such as html pages that generated randomized color schemes, or a JS implementation of Conway's Game of Life.</p>
-                    <figure class="figure">
-                        <div class="imgwrap">
-                            <img class="figure-img img-fluid" src="img/gameolife.png" alt="Game of Life">
-                        </div>
-                        <figcaption class="text-center">My implementation of 'Game of Life' in JS using a matrix of text characters, with a few extra features.</figcaption>
-                    </figure>
-                    <p>After a summer of researching and writing web content about Texas Family Law for a local law office, and a senior year where I spent every Wednesday tutoring underpriveleged students in West Dallas, I came to recognize my passion for presenting facts and educating others, 
-                        and how it could compliment my preexisting passions for design and procedural algorithms. As such, when I came to Georgia Tech I chose concentrations in People (relating to HCI, Psychology, and infoviz) and Media. I also joined the editorial board of 
-                        <a href="http://northavereview.com/">North Avenue Review</a> magazine (an editorial magazine on campus), where I now manage its website and public presence as Editor-in-Chief! I've also served Student Government (SGA) as the College of Computing representative 
-                        to the undergrad legislature since the end of my freshman year, which has been an incredible blessing! I've spent the last few semesters getting to meet dozens of faculty and student leaders across campus, and to work with them on a whole range of important projects such as elections, budgets, and a new manual for student organizations. I'm now a member of SGA's IT Board, where I'm helping redesign Course Critique, our grade-reporting website! I still try to find time to make more little web experiments here and there in my spare time, though...</p>
                 </div>
             </section>
 
@@ -244,6 +217,44 @@
                             <img alt="An image of my old website." src="img/oldsite.jpg">
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <hr class="m-0">
+
+            <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+                <div class="w-100">
+                    <h2 class="mb-5">A Little More About Me...</h2>
+                    <p>Born and raised in Dallas, TX (although I currently live in a suburb of Atlanta, GA), I've had a love for coding and digital art since I was very little--I have fond memories of tinkering around with GameMaker (does anyone still use GameMaker anymore?) in elementary school, showing off my little homemade projects to my teachers.</p>
+                    <figure class="figure">
+                        <div class="imgwrap">
+                            <img class="figure-img img-fluid" src="img/bluewirez.png" alt="Bluewirez">
+                        </div>
+                        <figcaption class="text-center">"Bluewirez", a pseudo-electricity simulator I made in middle school where you can build glitchy circuits using a set of premade components.</figcaption>
+                    </figure>
+                    <p>During my first year of high school, I made a portfolio website for the first time; the term 'website' is perhaps a bit generous, as the frontpage consisted of little more than some turqoise text laid against a blue background. 
+                        Nonetheless, even by then I'd developed a fascination for procedural algorithms--I spent my spare time making tiny experimental web projects such as html pages that generated randomized color schemes, or a JS implementation of Conway's Game of Life.</p>
+                    <figure class="figure">
+                        <div class="imgwrap">
+                            <img class="figure-img img-fluid" src="img/gameolife.png" alt="Game of Life">
+                        </div>
+                        <figcaption class="text-center">My implementation of 'Game of Life' in JS using a matrix of text characters, with a few extra features.</figcaption>
+                    </figure>
+                    <p>After a summer of researching and writing web content about Texas Family Law for a local law office, and a senior year where I spent every Wednesday tutoring underpriveleged students in West Dallas, I came to recognize my passion for presenting facts and educating others, 
+                        and how it could compliment my preexisting passions for design and procedural algorithms. As such, when I came to Georgia Tech, I chose to study Computer Science, and I selected concentrations in People (relating to HCI, Psychology, and UX Design) and Media (Dataviz and Graphics). Seeking an outlet for my passions, I joined the editorial board of 
+                        <a href="http://northavereview.com/">North Avenue Review (NAR)</a> magazine (an open forum magazine on campus), where I served four years as Website Manager/Marketing Editor, and later Editor-in-Chief. I wore many hats during that time--I worked on event planning, revamped the website to support online-exclusive content as a part of NAR's
+                         move to an all-virtual environment during the COVID-19 pandemic, and I represented NAR during financial planning and organizational meetings with the Georgia Tech administration. <br><br>While at Georgia Tech I also served several years in Student Government (SGA) as the College of Computing undergrad representative, 
+                        where I had the privilege of meeting dozens of faculty and student leaders across campus--we worked together on a whole range of important projects such as elections, budgets, and a new manual for student organizations. I later joined SGA's IT Board, where I helped design version 2.0 of Course Critique, 
+                        Georgia Tech’s official grade-reporting web application used by GT’s student body of more than 40,000 undergraduates and graduates! Without a doubt, Georgia Tech was a wonderful and valuable experience for me in many ways.
+                    </p>
+                    <figure class="figure">
+                        <div class="imgwrap">
+                            <img class="figure-img img-fluid" src="img/critique.png" alt="Course Critique 2.0">
+                        </div>
+                        <figcaption class="text-center">An example view of a course breakdown table in Course Critique 2.0. I helped design part of this table :)</figcaption>
+                    </figure>
+                    <p>Now that I've graduated, and have a few internships and some full-time Softare Development experience under my belt, I'm more confident than ever that I chose the right career path for me to pursue and express my passions! That being said, I'm still an enthusiast at heart--although I'm fairly busy these days,
+                         I still try to find time to work on my own passion projects every now and then. Right now I'm working on a historical data visualization project about one of the earliest multiplayer space exploration games (Noctis IV), as well as a videogame project of my own which you can read about in my <a href="#project">Projects</a> section! </p>
                 </div>
             </section>
         </div>
